test/fixtures/base/04-statefulsets.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
  namespace: k8s-d2-test
spec:
  serviceName: database
  replicas: 2
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      securityContext:
        fsGroup: 999
      containers:
      - name: postgres
        image: registry.k8s.io/pause:3.10
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: standard
      resources:
        requests:
          storage: 1Gi
