test/fixtures/base/05-daemonsets.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: log-collector
  namespace: k8s-d2-test
spec:
  selector:
    matchLabels:
      app: logging
  template:
    metadata:
      labels:
        app: logging
    spec:
      containers:
      - name: fluentd
        image: registry.k8s.io/pause:3.10
        imagePullPolicy: IfNotPresent
